assets/style.css
html { overflow-y: scroll; } 

body {
    font-family: 'Francois One', sans-serif;
    font-size: 16px; 
}

.p {
    text-align: center;
    line-height: 100px;
}

#spanFooter {
    color: white;
    font-weight: 10;
}

#downloads {
    font-weight: 1;
}

#divBody{
    height: 1700px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    
}

#div1{
    height: 180px; 
    background: rgba(56, 55, 55, 0.779);
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

#div2{
    height: 70px; 
    background: rgba(9, 9, 9, 0.869);
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

#div3{
    height: 800px;  
    background-color: transparent;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

#divDownloads {
    height: 700px;
    display: flex;
    flex-direction: column; 
    justify-content: center;
    justify-items: center;
    font-size: 14px;
}

#divFooter { 
    height: 130px; 
    background: rgba(119, 117, 117, 0.779);
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

a:link, a:visited{
    color: rgb(255, 255, 255);
    background-color: transparent;
    text-decoration: none;
}

#menuTable{
    background-color: transparent;
    justify-content: left; 
}

#menuTable th{
    width: 500px;
    background-color: transparent;
    text-align: centre;
}

#AboutUsTable{
    height: 50%;
    background-color: transparent;
    justify-content: center;
}

#AboutUsTable td{
    width: 333px; 
    height: 35%;
    background-color: transparent;  
    text-align: center;  
    justify-content: center;
}

#downloadsTable{  
    width: auto;
    background-color: transparent;   
    align-self: center;
    justify-content: center;
    margin-left: 10%;
}

#downloadsTable td{ 
    width: 270px;
    height: 50px;
    background-color: transparent;  
    text-align: left;
    align-self: center;
}

/* --------------------------------------- */
/* --------------------------------------- */
/* for timeline */
:root{
    --primary-color: #212121;  
}

*{
    margin: 0;
    padding: 0;
}

/* Timeline Container */
.timeline{ 
    margin: 30px auto;
    padding: 30px;
    justify-content: center;
}

/* Card container */
.card{
    position: relative;
    max-width: 700px;
}

/* setting padding based on even or odd */
.card:nth-child(odd){
    padding: 30px 0 30px 30px;
}
.card:nth-child(even){
    padding: 30px 30px 30px 0;
}
/* Global ::before */
.card::before{
    content: "";
    position: absolute;
    width: 50%;
    border: solid black;
}

/* Setting the border of top, bottom, left */
.card:nth-child(odd)::before{
    left: 0px;
    top: -4.5px;
    bottom: -4.5px;
    border-width: 5px 0 5px 5px;
    border-radius: 50px 0 0 50px;
}

/* Setting the border of top, bottom, right */
.card:nth-child(even)::before{
    right: 0;
    top: 0;
    bottom: 0;
    border-width: 5px 5px 5px 0;
    border-radius: 0 50px 50px 0;
}

/* Removing the border if it is the first card */
.card:first-child::before{
    border-top: 0;
    border-top-left-radius: 0;
}

/* Removing the border if it is the last card  and it's odd */
.card:last-child:nth-child(odd)::before{
    border-bottom: 0;
    border-bottom-left-radius: 0;
}

/* Removing the border if it is the last card  and it's even */
.card:last-child:nth-child(even)::before{
    border-bottom: 0;
    border-bottom-right-radius: 0;
}

/* Information about the timeline */
.info{
    display: flex;
    flex-direction: column;
    background: transparent;
    color: gray;
    border-radius: 10px;
    padding: 10px;
}

/* Title of the card */
.title{
    color: black;
    position: relative;
}

/* Timeline dot  */
.title::before{
    content: "";
    position: absolute;
    width: 10px;
    height: 10px;
    background: white;
    border-radius: 999px;
    border: 3px solid black;
}

/* text right if the card is even  */
.card:nth-child(even) > .info > .title{
    text-align: right;
}

/* setting dot to the left if the card is odd */
.card:nth-child(odd) > .info > .title::before{
    left: -45px;
}

/* setting dot to the right if the card is odd */
.card:nth-child(even) > .info > .title::before{
    right: -45px;
}
/* --------------------------------------- */
/* --------------------------------------- */

